--- a/app/assets/javascripts/templates/index.html
+++ b/app/assets/javascripts/templates/index.html
@@ -17,7 +17,7 @@
 <section class="row" ng-if="recipes">
   <h1 class="text-center h2">Results</h1>
   <ul class="list-unstyled">
-    <li ng-repeat="recipe in recipes">
+    <li ng-repeat="recipe in recipes | filter: keywords">
       <section class="well col-md-6 col-md-offset-3">
         <h1 class="h3 col-md-6 text-right" style="margin-top: 0"><a href ng-click="view(recipe.id)" >{{recipe.name}}</a></h1>
         <div class="col-md-6">
