update authorization for current_user recipes only.

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -28,6 +28,7 @@
   </div> <!-- end .nav-container -->
 </div> <!-- end .navbar -->
 
+<div class="container-fluid">
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -57,6 +58,7 @@
 <% end %>
 
 <%= render "users/shared/links" %>
+</div> <!-- End .container-fluid -->
 
 <!-- Footer -->
 <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
