--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 	  <%= csrf_meta_tags %>
 	  <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great|Marck+Script|Alex+Brush|Shadows+Into+Light|Gloria+Hallelujah|Great+Vibes|Indie+Flower|Pinyon+Script|Fanwood+Text' rel='stylesheet' type='text/css'>
 	</head>
-	<body>
+	<body class="message">
 
 		<% if notice %>
 			<p class="alert alert-success"><%= notice %></p>
