--- a/app/assets/javascripts/templates/form.html
+++ b/app/assets/javascripts/templates/form.html
@@ -1,9 +1,9 @@
-<aside class="flash row">
+<!-- <aside class="flash row">
   <article flash-alert duration="0" active-class="alert" class="col-md-6 col-md-offset-3">
     {{flash.message}}
   </article>
-</aside>
-<form class="form-horizontal" role="form" class="edit-user">
+</aside> -->
+<form class="form-horizontal" role="form" class="edit-user" id="edit">
   <div class="form-group" ng-class="{'has-warning has-feedback':errors.name}">
     <label 
       for="name" 
