--- a/app/assets/javascripts/templates/show.html
+++ b/app/assets/javascripts/templates/show.html
@@ -1,9 +1,9 @@
-<aside class="flash row">
+<!-- <aside class="flash row">
   <article flash-alert duration="0" active-class="alert" class="col-md-6 col-md-offset-3 col-sm-12">
     {{flash.message}}
   </article>
-</aside>
-<section class="col-md-6 col-md-offset-3">
+</aside> -->
+<section class="col-md-6 col-md-offset-3" id="show">
   <article class="panel panel-info">
     <header class="panel-heading"><h1>{{recipe.name}}</h1></header>
     <p class="panel-body">
