--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,47 @@
-<div ng-app="receta">
-  <div class="view-container">
+<!-- Navbar -->
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="nav-container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button> 
+      <a class="navbar-brand" href="/" id="brand">Heirloom Recipes</a>  
+    </div> <!-- end .navbar-header -->
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li><%=link_to "Home", root_path %></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/contact">Contact</a></li>
+        <% if (current_user) %>
+          <li><%= link_to 'Sign out', destroy_user_session_path %></li>
+        <% else %>
+          <li><%= link_to 'Sign up', new_user_registration_path %></li>
+        <% end %>
+      </ul>
+    </div> <!-- end .navbar-collapse -->
+  </div> <!-- end .nav-container -->
+</div> <!-- end .navbar -->
+
+<div ng-app="heirloom">
+  <div class="view-container container-fluid">
     <div ng-view class="view-frame animate-view"></div>
   </div>
 </div>
+
+<!-- Footer -->
+<div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+  <div class="nav-container">
+    <div class="navbar-text pull-left">
+      <p>© 2016 Heirloom Recipes</p>
+    </div> <!-- end .navbar-text pull-left -->
+    <div class="navbar-text pull-right">
+      <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
+      <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="#"><i class="fa fa-linkedin fa-2x"></i></a>
+      <a href="#"><i class="fa fa-trello fa-2x"></i></a>
+    </div> <!-- end .navbar-text pull-right -->
+  </div> <!-- end .nav-container -->
+</div> <!-- end footer -->
