--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -16,11 +16,8 @@
         <li><a href="/about">About</a></li>
         <li><a href="/contact">Contact</a></li>
         <% if (current_user) %>
-          <!-- <li class = "Profile"> <%= link_to 'My Profile', user_profiles_path(current_user) %> </li> -->
-          <li><%= link_to 'Dailies', user_dailies_path(current_user) %></li>
           <li><%= link_to 'Sign out', destroy_user_session_path %></li>
         <% else %>
-          <!-- <li><%= link_to 'Log In', new_user_session_path %></li> -->
           <li><%= link_to 'Sign up', new_user_registration_path %></li>
         <% end %>
       </ul>
@@ -28,9 +25,9 @@
   </div> <!-- end .nav-container -->
 </div> <!-- end .navbar -->
 
-<div class="container-fluid">
+<div class="container-fluid" id="signup">
 <h2>Sign up</h2>
-
+<br>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -38,7 +35,7 @@
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
-
+  <br>
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
@@ -46,12 +43,12 @@
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
-
+  <br>
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
-
+  <br>
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
