add ingredients field to form, update css.

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -7,6 +7,7 @@
 	text-align: center;
 	position: center;
   padding: 10px 20px 10px 20px;
+  margin-bottom: 60px;
 }
 
 #signup {
@@ -14,6 +15,7 @@
 	text-align: center;
 	position: center;
   padding: 10px 20px 10px 20px;
+  margin-bottom: 60px;
 }
 
 #search {
@@ -29,10 +31,14 @@
 
 #show {
 	margin-top: 20px;
+	padding-bottom: 20px;
+	margin-bottom: 60px;
 }
 
 #edit {
 	margin-top: 20px;
+	padding-bottom: 20px;
+	margin-bottom: 60px;
 }
 
 .message {
