--- a/app/assets/javascripts/templates/form.html
+++ b/app/assets/javascripts/templates/form.html
@@ -3,34 +3,49 @@
     {{flash.message}}
   </article>
 </aside> -->
-<form class="form-horizontal" role="form" class="edit-user" id="edit">
-  <div class="form-group" ng-class="{'has-warning has-feedback':errors.name}">
-    <label 
-      for="name" 
-      class="col-md-2 control-label col-md-offset-2">
-      Name
-    </label>
-    <div class="col-md-5">
-      <input type="text" name="name" class="form-control" placeholder="e.g. Baked Alaska" ng-model="recipe.name">
+<section id="edit">
+  <form class="form-horizontal" role="form" class="edit-user">
+    <div class="form-group" ng-class="{'has-warning has-feedback':errors.name}">
+      <label 
+        for="name" 
+        class="col-md-2 control-label col-md-offset-2">
+        Name
+      </label>
+      <div class="col-md-5">
+        <input type="text" name="name" class="form-control" placeholder="e.g. Baked Alaska" ng-model="recipe.name">
+      </div>
     </div>
-  </div>
-  <div class="form-group" ng-class="{'has-warning has-feedback':errors.name}">
-    <label 
-      for="instructions" 
-      class="col-md-2 control-label col-md-offset-2">
-      Instructions
-    </label>
-    <div class="col-md-5">
-      <textarea name="instructions" class="form-control" ng-model='recipe.instructions' placeholder="e.g. Flambé for 20 seconds">
-      </textarea>
+
+    <div class="form-group" ng-class="{'has-warning has-feedback':errors.name}">
+      <label 
+        for="ingredient" 
+        class="col-md-2 control-label col-md-offset-2">
+        Ingredients
+      </label>
+      <div class="col-md-5">
+        <textarea name="ingredient" class="form-control" ng-model='recipe.ingredient' placeholder="e.g. 1 cup flour. 1 cup milk. 2 T butter. 2 tsp vanilla extract. Pinch of salt.">
+        </textarea>
+      </div>
     </div>
-  </div>
-  <div class="form-group">
-    <div class="col-md-offset-2 col-md-3">
-      <button class="btn btn-default" ng-click="cancel()">Cancel</button>
+
+    <div class="form-group" ng-class="{'has-warning has-feedback':errors.name}">
+      <label 
+        for="instructions" 
+        class="col-md-2 control-label col-md-offset-2">
+        Instructions
+      </label>
+      <div class="col-md-5">
+        <textarea name="instructions" class="form-control" ng-model='recipe.instructions' placeholder="e.g. Flambé for 20 seconds">
+        </textarea>
+      </div>
     </div>
-    <div class="col-md-4 text-right">
-      <button class="btn btn-primary" ng-click="save()">Save</button>
+    <div class="form-group">
+      <div class="col-md-offset-2 col-md-3">
+        <button class="btn btn-default" ng-click="cancel()">Cancel</button>
+      </div>
+      <div class="col-md-4 text-right">
+        <button class="btn btn-primary" ng-click="save()">Save</button>
+      </div>
     </div>
-  </div>
+  </form>
 </section>
