--- a/app/assets/javascripts/templates/show.html
+++ b/app/assets/javascripts/templates/show.html
@@ -6,7 +6,12 @@
 <section class="col-md-6 col-md-offset-3" id="show">
   <article class="panel panel-info">
     <header class="panel-heading"><h1>{{recipe.name}}</h1></header>
-    <p class="panel-body">
+    <p class="panel-body">Ingredients:
+      <br><br>
+      {{recipe.ingredient}}
+    </p>
+    <p class="panel-body">Instructions:
+      <br><br>
       {{recipe.instructions}}
     </p>
   </article>
